# discord-ping

./: .gitignore  LICENSE  README.md  flake.nix  install.sh  pyproject.toml
discord_ping/: main.py
